--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@
 /log/*.log
 /tmp
 
+# Ignore secret token initializer
+/config/initializers/secret_token.rb
+
 # Ignore other unneeded files.
 database.yml
 doc/
